5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1674_1880.log
== SUBMITION (2019-04-26 22:46:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m=10):
		print("outubro")
	elif(m=11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.149844
-- ERROR:
  File "/home/codebench/codes/1674/1880/main.py", line 23
    elif(m=10):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:46:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m=10):
		print("outubro")
	elif(m=11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 23
    elif(m=10):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:47:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m=11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.101203
-- ERROR:
  File "/home/codebench/codes/1674/1880/main.py", line 25
    elif(m=11):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:47:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m=11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 25
    elif(m=11):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:47:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.126797
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:47:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:47:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.179033
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:48:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m =int(input("Digite m: "))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("julho")
	elif(m==7):
		print("junho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.145509
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
